--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,8 +3,17 @@
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher"
-        >
-    </application>
+                 android:icon="@drawable/ic_launcher">
+        <service
+            android:name="org.fruct.oss.mapcontent.content.RemoteContentService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
 
+        <service
+            android:name="org.fruct.oss.mapcontent.content.DataService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
+    </application>
 </manifest>
