--- a/build.gradle
+++ b/build.gradle
@@ -5,18 +5,18 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "org.fruct.oss.mapcontent"
         minSdkVersion 10
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
+
+    /*buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
+    }*/
 }
 
 dependencies {
