--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
           package="org.fruct.oss.mapcontent">
 
     <application android:allowBackup="true"
-                 android:label="@string/app_name"
-                 android:icon="@drawable/ic_launcher">
+                 android:label="@string/app_name">
         <service
             android:name="org.fruct.oss.mapcontent.content.RemoteContentService"
             android:enabled="true"
