--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -14,5 +14,12 @@
             android:enabled="true"
             android:exported="false" >
         </service>
+
+        <service
+            android:name="org.fruct.oss.mapcontent.content.ContentService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
+
     </application>
 </manifest>
